--- a/src/app/components/listar-proyectos/listar-proyectos.component.html
+++ b/src/app/components/listar-proyectos/listar-proyectos.component.html
@@ -52,6 +52,9 @@
                             <h5 class="card-title">{{p.title}}</h5>
                             <p class="card-text">{{p.description}}</p>
                         </div>
+                        <div style="margin: 0px 10px 10px;">
+                            <button type="submit" class="btn btn-warning" style="width: 100%;">Editar</button>
+                        </div>
                     </div>
                 </div>
             </div>
