--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -18,14 +18,15 @@
                                     <div class="text-center">
                                         <h1 class="h4 text-gray-900 mb-4">Bienvenido</h1>
                                     </div>
-                                    <form class="user">
+                                    <form class="user" (ngSubmit)="onSubmit(myForm)" #myForm="ngForm">
                                         <div class="form-group">
-                                            <input type="email" class="form-control form-control-user"
-                                                id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Email">
+                                            <input type="email" class="form-control form-control-user" id="email"
+                                                name="email" [(ngModel)]="user.email" aria-describedby="emailHelp"
+                                                placeholder="Email">
                                         </div>
                                         <div class="form-group">
-                                            <input type="password" class="form-control form-control-user"
-                                                id="exampleInputPassword" placeholder="Contraseña">
+                                            <input type="password" class="form-control form-control-user" id="password"
+                                                name="password" [(ngModel)]="user.password" placeholder="Contraseña">
                                         </div>
                                         <div class="form-group">
                                             <div class="custom-control custom-checkbox small">
@@ -33,16 +34,16 @@
                                                 <label class="custom-control-label" for="customCheck">Recuérdame</label>
                                             </div>
                                         </div>
-                                        <a href="index.html" class="btn btn-primary btn-user btn-block">
+                                        <button type="submit" class="btn btn-primary btn-user btn-block">
                                             Iniciar sesión
-                                        </a>
+                                        </button>
                                         <hr>
-                                        <a href="index.html" class="btn btn-google btn-user btn-block">
+                                        <button type="button" class="btn btn-google btn-user btn-block">
                                             <i class="fab fa-google fa-fw"></i> Inicia sesión con Google
-                                        </a>
-                                        <a href="index.html" class="btn btn-facebook btn-user btn-block">
+                                        </button>
+                                        <button type="button" class="btn btn-facebook btn-user btn-block">
                                             <i class="fab fa-facebook-f fa-fw"></i> Iniciar sesión con Facebook
-                                        </a>
+                                        </button>
                                     </form>
                                     <hr>
                                     <div class="text-center">
