--- a/src/app/components/listar-proyectos/listar-proyectos.component.html
+++ b/src/app/components/listar-proyectos/listar-proyectos.component.html
@@ -15,7 +15,7 @@
                                         Capital
                                     </div>
                                     <div class="h5 mb-0 font-weight-bold text-gray-800">
-                                        $2500</div>
+                                        ${{total}}</div>
                                 </div>
                                 <div class="col-auto">
                                     <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
