--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,65 +1,63 @@
-<div class="bg-gradient-primary">
+<div class="container">
 
+    <!-- Outer Row -->
+    <div class="row justify-content-center">
 
-    <div class="container">
+        <div class="col-xl-10 col-lg-12 col-md-9">
 
-        <!-- Outer Row -->
-        <div class="row justify-content-center">
-
-            <div class="col-xl-10 col-lg-12 col-md-9">
-
-                <div class="card o-hidden border-0 shadow-lg my-5">
-                    <div class="card-body p-0">
-                        <!-- Nested Row within Card Body -->
-                        <div class="row">
-                            <div class="col-lg-6 d-none d-lg-block" style="background-color: #f7f7f7;">
-                                <img src="assets/img/logo.jpeg" alt="" width="400" >
+            <div class="card o-hidden border-0 shadow-lg my-5">
+                <div class="card-body p-0">
+                    <!-- Nested Row within Card Body -->
+                    <div class="row">
+                        <div class="col-lg-6"
+                            style="background-color: #f7f7f7; display: flex; justify-content: center; align-items: center;">
+                            <div>
+                                <span style="color: black; font-weight: 900; font-size:100px;">BACE</span>
                             </div>
-                            <div class="col-lg-6">
-                                <div class="p-5">
-                                    <div class="text-center">
-                                        <h1 class="h4 text-gray-900 mb-4">Bienvenido</h1>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="p-5">
+                                <div class="text-center">
+                                    <h1 class="h4 text-gray-900 mb-4">Bienvenido</h1>
+                                </div>
+                                <form class="user" (ngSubmit)="onSubmit(myForm)" #myForm="ngForm">
+                                    <div class="form-group">
+                                        <input type="email" class="form-control form-control-user" id="email"
+                                            name="email" [(ngModel)]="user.email" aria-describedby="emailHelp"
+                                            placeholder="Email">
                                     </div>
-                                    <form class="user" (ngSubmit)="onSubmit(myForm)" #myForm="ngForm">
-                                        <div class="form-group">
-                                            <input type="email" class="form-control form-control-user" id="email"
-                                                name="email" [(ngModel)]="user.email" aria-describedby="emailHelp"
-                                                placeholder="Email">
+                                    <div class="form-group">
+                                        <input type="password" class="form-control form-control-user" id="password"
+                                            name="password" [(ngModel)]="user.password" placeholder="Contraseña">
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="custom-control custom-checkbox small">
+                                            <input type="checkbox" class="custom-control-input" id="customCheck">
+                                            <label class="custom-control-label" for="customCheck">Recuérdame</label>
                                         </div>
-                                        <div class="form-group">
-                                            <input type="password" class="form-control form-control-user" id="password"
-                                                name="password" [(ngModel)]="user.password" placeholder="Contraseña">
-                                        </div>
-                                        <div class="form-group">
-                                            <div class="custom-control custom-checkbox small">
-                                                <input type="checkbox" class="custom-control-input" id="customCheck">
-                                                <label class="custom-control-label" for="customCheck">Recuérdame</label>
-                                            </div>
-                                        </div>
-                                        <button type="submit" class="btn btn-primary btn-user btn-block">
-                                            Iniciar sesión
-                                        </button>
-                                        <hr>
-                                        <button type="button" class="btn btn-google btn-user btn-block">
-                                            <i class="fab fa-google fa-fw"></i> Inicia sesión con Google
-                                        </button>
-                                        <button type="button" class="btn btn-facebook btn-user btn-block">
-                                            <i class="fab fa-facebook-f fa-fw"></i> Iniciar sesión con Facebook
-                                        </button>
-                                    </form>
+                                    </div>
+                                    <button type="submit" class="btn btn-primary btn-user btn-block">
+                                        Iniciar sesión
+                                    </button>
                                     <hr>
-                                    <div class="text-center">
-                                        <a class="small" href="forgot-password.html">¿Se te olvidó tu contraseña?</a>
-                                    </div>
-                                    <div class="text-center">
-                                        <a class="small" href="register.html">¡Crea una cuenta!</a>
-                                    </div>
+                                    <button type="button" class="btn btn-google btn-user btn-block">
+                                        <i class="fab fa-google fa-fw"></i> Inicia sesión con Google
+                                    </button>
+                                    <button type="button" class="btn btn-facebook btn-user btn-block">
+                                        <i class="fab fa-facebook-f fa-fw"></i> Iniciar sesión con Facebook
+                                    </button>
+                                </form>
+                                <hr>
+                                <div class="text-center">
+                                    <a class="small" href="forgot-password.html">¿Se te olvidó tu contraseña?</a>
+                                </div>
+                                <div class="text-center">
+                                    <a class="small" href="register.html">¡Crea una cuenta!</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-
             </div>
 
         </div>
