--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -49,10 +49,10 @@
                                 </form>
                                 <hr>
                                 <div class="text-center">
-                                    <a class="small" href="forgot-password.html">¿Se te olvidó tu contraseña?</a>
+                                    <a class="small" routerLink="/login">¿Se te olvidó tu contraseña?</a>
                                 </div>
                                 <div class="text-center">
-                                    <a class="small" href="register.html">¡Crea una cuenta!</a>
+                                    <a class="small" routerLink="/login">¡Crea una cuenta!</a>
                                 </div>
                             </div>
                         </div>
